--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://github.com/Densaugeo/AsyncEmit",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Densaugeo/AsyncEmit.git"
+    "url": "git@github.com:Densaugeo/AsyncEmit.git"
   },
   "keywords": [
     "dataflow",
