--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "async-emit",
   "description": "Asynchronous event emitter library (for JS)",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "AsyncEmit.js",
   "homepage": "https://github.com/Densaugeo/AsyncEmit",
   "repository": {
     "type": "git",
-    "url": "git@github.com:Densaugeo/AsyncEmit.git"
+    "url": "https://github.com/Densaugeo/AsyncEmit.git"
   },
   "keywords": [
     "dataflow",
