--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
-  "name": "async-emit",
-  "description": "Asynchronous event emitter library (for JS)",
-  "version": "0.1.1",
-  "main": "AsyncEmit.js",
-  "homepage": "https://github.com/Densaugeo/AsyncEmit",
+  "name": "asynter",
+  "description": "Asynchronous event emitter library",
+  "version": "0.1.2",
+  "main": "AsyNTer.js",
+  "homepage": "https://github.com/Densaugeo/AsyNTer",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Densaugeo/AsyncEmit.git"
+    "url": "https://github.com/Densaugeo/AsyNTer.git"
   },
   "keywords": [
     "dataflow",
